force-app/main/default/objects/Rate_Agreement_Lines__c/Rate_Agreement_Lines__c.object-meta.xml
<CustomObject>
    <label>Rate Agreement Lines</label>
    <nameField>
        <displayFormat>RAL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rate Agreement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>