force-app/main/default/objects/Rate_Agreement_Lines__c/fields/Calc_Type__c.field-meta.xml
<CustomField>
    <fullName>Calc_Type__c</fullName>
    <label>Calc Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Margin Amount</fullName>
            </value>
            <value>
                <fullName>Fixed Margin %</fullName>
            </value>
            <value>
                <fullName>Max Margin %</fullName>
            </value>
            <value>
                <fullName>Max Margin Amount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>