force-app/main/default/objects/Rate_Agreement_Lines__c/fields/Margin_Value__c.field-meta.xml
<CustomField>
    <fullName>Margin_Value__c</fullName>
    <label>Margin Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>