force-app/main/default/objects/Rate_Agreement_Lines__c/fields/Max_Scale__c.field-meta.xml
<CustomField>
    <fullName>Max_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Max Scale</label>
    <referenceTo>Rate_Agreement_Scale__c</referenceTo>
    <relationshipLabel>Rate Agreement Lines (Max Scale)</relationshipLabel>
    <relationshipName>Rate_Agreement_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>