force-app/main/default/objects/Rate_Agreement_Lines__c/fields/Min_Scale__c.field-meta.xml
<CustomField>
    <fullName>Min_Scale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Min Scale</label>
    <referenceTo>Rate_Agreement_Scale__c</referenceTo>
    <relationshipLabel>Rate Agreement Lines</relationshipLabel>
    <relationshipName>Rate_Agreement_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>